--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,59 +1,41 @@
-version: '3'
 services:
-  user-service:
-    build: ./user_service
-    ports:
-      - "5000:5000"
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-    depends_on:
-      - user-db
-
-  user-db:
-    image: postgres:13
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: users_db
-    volumes:
-      - user_db_data:/var/lib/postgresql/data
-
-  product-service:
-    build: ./product_service
+  product_service:
+    build:
+      context: ./product_service
     ports:
       - "3000:3000"
     depends_on:
-      - product-db
+      - db
+    networks:
+      - app-network
 
-  product-db:
-    image: mongo
-    volumes:
-      - product_db_data:/data/db
-
-  order-service:
-    build: ./order_service
+  order_service:
+    build:
+      context: ./order_service
     ports:
       - "8080:8080"
     depends_on:
-      - order-db
+      - db
+    networks:
+      - app-network
 
-  order-db:
-    image: mysql:8
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: orders_db
-    volumes:
-      - order_db_data:/var/lib/mysql
-
-  nginx:
-    image: nginx:alpine
+  user_service:
+    build:
+      context: ./user_service  # Ensure this directory exists
     ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - "5000:5000"  # Modify as per actual service port in `user_serviceapp.py`
+    depends_on:
+      - db
+    networks:
+      - app-network
 
-volumes:
-  user_db_data:
-  product_db_data:
-  order_db_data:
+  db:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
